Say it in the code: no comments, no javadoc, no docstrings (#104)
Every comment, javadoc block and Python docstring under TeamCode/src and
tools is gone: 4,749 lines. What they said has to be said by names,
structure and tests instead, which is most of what they were restating.

Only comments and formatting changed. Each Java file was compared with its
old self, comments and whitespace removed from both, and 122 of 126 matched
exactly. Three of the four differ only by an import Spotless then dropped as
unused, because the only thing naming it was a javadoc link. The fourth is
below.

Two places where prose was load-bearing rather than explanatory:

LocalizerReadsTheRobotsClockTest proved that MainSources matches resolved
symbols rather than text, and used a javadoc mention as its fixture. Its
fixture is now our own class's name: ClockedOverflowEncoder has the text
OverflowEncoder inside it while resolving to nothing of Road Runner's, which
makes the same point without prose to lean on.

StepTest named two tests after done(), which is tick() now.

What is lost, deliberately: four TODO markers in the Road Runner tuning
code, and the unit annotations on MecanumDrive's tuned constants
(parYTicks, perpXTicks and the rest), which said what the numbers measure.
Nothing else said it. doc/CONTEXT.md keeps the vocabulary and the
reasoning, and git keeps the rest.