@@ -6,20 +6,9 @@ import com.palantir.javaformat.java.ImportOrderer;
 import com.palantir.javaformat.java.JavaFormatterOptions;
 import com.palantir.javaformat.java.RemoveUnusedImports;
 
-/**
- * palantir-java-format, run in this process over one file's text: the three steps Spotless's
- * {@code palantirJavaFormat} step runs, in its order, so what the coding server commits is what
- * {@code :TeamCode:spotlessCheck} accepts and a student's push never fails on formatting alone.
- * Shelling out to {@code ./gradlew :TeamCode:spotlessApply} per click would cost seconds of Gradle
- * startup and would format files the user never touched.
- *
- * <p>Not the Gradle task, and not a check: it rewrites, and it is the caller's business to decide
- * when. The coding server calls it on Commit and nowhere else.
- */
 public final class JavaFormatter {
     private JavaFormatter() {}
 
-    /** Source the formatter cannot parse, so there is nothing for it to write. */
     public static final class Unparseable extends Exception {
         Unparseable(String message) {
             super(message);
@@ -31,12 +20,6 @@ public final class JavaFormatter {
     private static final Formatter FORMATTER = Formatter.createFormatter(
             JavaFormatterOptions.builder().style(STYLE).build());
 
-    /**
-     * The Java source as the formatter would write it: imports ordered, the unused ones removed,
-     * then the text formatted. Formatting its own output changes nothing.
-     *
-     * @throws Unparseable when the source does not parse, naming the line and column
-     */
     public static String format(String source) throws Unparseable {
         try {
             return FORMATTER.formatSource(
@@ -46,12 +29,6 @@ public final class JavaFormatter {
         }
     }
 
-    /**
-     * Formats a trivial file, so that a JVM started without the {@code --add-exports} the formatter
-     * needs says so here, naming the fix, instead of on a teammate's first Commit. The coding
-     * server calls this as it starts: a server that cannot format is a server that would commit
-     * work CI then rejects.
-     */
     public static void check() {
         try {
             format("class A {}\n");
@@ -66,13 +43,11 @@ public final class JavaFormatter {
         }
     }
 
-    /** The version of palantir-java-format on this classpath, which has to be the one Spotless checks with. */
     public static String version() {
         String version = Formatter.class.getPackage().getImplementationVersion();
         return version == null ? "unknown" : version;
     }
 
-    /** The formatter reports several errors over several lines; a warning in the editor has one. */
     private static String oneLine(String message) {
         return message == null ? "does not parse" : message.replaceAll("\\s*\\R\\s*", "; ");
     }
